# click_up_to_dash

./: README.md  pyproject.toml
src/scrapy/: close_pop_up.py  credentials.py  get_xlsx_proj.py  main_scrapy.py
